[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/block.png" type="Texture" id=1]
[ext_resource path="res://scripts/entity/Enemy_pl.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 Color : hint_color;

void fragment() {
	COLOR = Color;
}
"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/Color = Color( 0.882353, 0.243137, 0.243137, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.21794, 4.13682 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 260
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 4, -4 )
shape = SubResource( 1 )

[node name="Block" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
centered = false

[node name="raycasts" type="Node2D" parent="."]

[node name="RayCastLeft" type="RayCast2D" parent="raycasts"]
position = Vector2( 0, -4 )
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 4

[node name="RayCastRight" type="RayCast2D" parent="raycasts"]
position = Vector2( 8, -4 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 4

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DamageArea"]
visible = false
position = Vector2( 3.94514, -3.99773 )
shape = SubResource( 4 )

[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
